--- a/playbooks/oracle_backup/backup.yml
+++ b/playbooks/oracle_backup/backup.yml
@@ -12,7 +12,7 @@
 
     - name: Show Inputs
       debug:
-         var: json_inputs
+         msg: "{{ json_inputs | string }}"
 
     - name: RMAN script
       block:
@@ -102,7 +102,7 @@
 
         - name: Enable Repository Dispatch Event if supplied
           set_fact:
-            repository_dispatch_flag: "-r {{ repository_dispatch }} -j '{{ json_inputs }}'"
+            repository_dispatch_flag: "-r {{ repository_dispatch }} -j '{{ json_inputs | string }}'"
           when:
              - repository_dispatch is defined
              - json_inputs is defined
