--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -170,9 +170,9 @@ jobs:
           Inputs=$Inputs"\"TargetEnvironment\": \"$TargetEnvironment\","
           Inputs=$Inputs"\"TargetHost\": \"$TargetHost\","
           Inputs=$Inputs"\"Period\": \"$Period\","
-          Inputs=$Inputs"\"BackupStandbyOnPrimaryFailure\": \"$BackupStandbyOnPrimaryFailure\","
-          Inputs=$Inputs"\"FixAbsentChunks\": \"$FixAbsentChunks\","
-          Inputs=$Inputs"\"EnableTrace\": \"$EnableTrace\","
+          Inputs=$Inputs"\"BackupStandbyOnPrimaryFailure\": \"${BackupStandbyOnPrimaryFailure:-yes}\","
+          Inputs=$Inputs"\"FixAbsentChunks\": \"${FixAbsentChunks:-yes}\","
+          Inputs=$Inputs"\"EnableTrace\": \"${EnableTrace:-no}\","
           Inputs=$Inputs"\"VerboseOutput\": \"$VerboseOutput\","
           Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
           Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
