--- a/playbooks/oracle_duplicate/rman-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-duplicate.yml
@@ -111,6 +111,11 @@
       local_disk_backup: "-l"
     when: s3_source_bucket == 'NONE'
 
+  - name: Set catalog schema name
+    set_fact:
+      source_catalog_schema_option: "-r {{ source_catalog_schema }}"
+    when: source_catalog_schema is defined
+
   - name: RMAN Duplicate
     block:
 
@@ -124,17 +129,16 @@
 
       - name: Generate Command to Run RMAN Script
         set_fact:
-           run_rman_script: "/home/oracle/admin/rman_scripts/rman_duplicate.sh -d {{ database_primary_sid}} -s {{ source_db }} -c \"{{ catalog }}\" {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} \"{{ spfile_parameters_option|default()|trim }}\""
+           run_rman_script: "/home/oracle/admin/rman_scripts/rman_duplicate.sh -d {{ database_primary_sid}} -s {{ source_db }} -c \"{{ catalog }}\" {{ local_disk_backup | default() }} {{ rman_datetime_option | default() }} {{ ssm_parameter_option|default() }} {{ source_catalog_schema_option|default() }} \"{{ spfile_parameters_option|default()|trim }}\""
 
       - name: Show Script to Run
         debug:
            msg: "Running: {{ run_rman_script }}"
 
-      # Spawn RMAN as asynchronous background job unless we have set the run_rman_in_foreground parameter (for debugging purposes only)
       - name: Running RMAN script
         shell: "{{ run_rman_script }} &> /home/oracle/admin/rman_scripts/rman_duplicate_script_$( date +%Y%m%d%H%M ).log"
         async: 57600
-        poll: 300
+        poll: 120
         args:
           executable: /bin/bash
         register: duplicate_cmd_output
