--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -140,10 +140,15 @@ jobs:
                 Period="${{ inputs.Period }}"
                 BackupStandbyOnPrimaryFailure="yes"
               fi
+              RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
               # Build a JSON variable capturing all the inputs which have been supplied
               Inputs="{"
               Inputs=$Inputs"\"TargetEnvironment\": \"$TargetEnvironment\","
+              # The TargetHost is the simple type of the host, e.g. delius_primarydb
+              # The RmanTarget is the full group name including both the environment name and the database type, and may
+              # be updating during the course of the backup if it is retries on a standby database.
               Inputs=$Inputs"\"TargetHost\": \"$TargetHost\","
+              Inputs=$Inputs"\"RmanTarget\": \"$RmanTarget\","
               Inputs=$Inputs"\"Period\": \"$Period\","
               Inputs=$Inputs"\"BackupStandbyOnPrimaryFailure\": \"${BackupStandbyOnPrimaryFailure:-yes}\","
               Inputs=$Inputs"\"FixAbsentChunks\": \"${FixAbsentChunks:-yes}\","
@@ -151,6 +156,7 @@ jobs:
               Inputs=$Inputs"\"VerboseOutput\": \"$VerboseOutput\","
               Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
               Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
+              Inputs=$Inputs"\"Phase\": \"Starting\""
               Inputs=$Inputs"}"
           else
               # We come here if we have either:
@@ -162,14 +168,22 @@ jobs:
                  Inputs='${{ github.event.client_payload }}'
                  if [[ "${{ github.event.action}}" == "oracle-db-backup-success" ]]; then
                     BackupStatus="success"
+                    Inputs=$(echo $Inputs | jq '.Phase = "Validating Chunks"')
                  else
                     BackupStatus="failed"
+                    Inputs=$(echo $Inputs | jq '.Phase = "Retrying Failed Backup on Standby"')
+                    if [[ $(echo $Inputs | jq '.BackupStandbyOnPrimaryFailure // "yes"') == "yes" ]]; then
+                       # If we are allowed to retry a failed backup then change to the next host in sequence
+                       Inputs=$(echo $Inputs | jq '.RmanTarget |= gsub("standbydb1"; "standbydb2")')
+                       Inputs=$(echo $Inputs | jq '.RmanTarget |= gsub("primarydb"; "standbydb1")')
+                       RmanTarget=$(echo $Inputs | jq '.RmanTarget')
+                    fi
                  fi
               else
                  echo "Overriding command line with supplied JSON inputs"
                  Inputs='${{ github.event.inputs.ParametersJSON }}'
                  echo "JSON Inputs: $Inputs"
-                 BackupStatus=$(echo $Inputs | jq -r '.BackupStatus // "starting"')   
+                 BackupStatus=$(echo $Inputs | jq -r '.BackupStatus // "starting"')
               fi
               echo "JSON Inputs: $Inputs"
               TargetHost=$(echo $Inputs | jq -r '.TargetHost')
@@ -177,10 +191,9 @@ jobs:
               Period=$(echo $Inputs | jq -r '.Period')
               # The following 3 parameters are mandatory; abort if they are missing from JSON inputs
               [[ -z $TargetHost ]] && "Target Host is not specified in JSON inputs"  && exit 2
-              [[ -z $TargetEnvironment ]] && "Target Environment is not specified in JSON inputs"  && exit 3
-              [[ -z $Period ]] && "Backup Period (daily/weekly) is not specified in JSON inputs"  && exit 4
+              [[ -z $TargetEnvironment ]] && "Target Environment is not specified in JSON inputs" && exit 3
+              [[ -z $Period ]] && "Backup Period (daily/weekly) is not specified in JSON inputs" && exit 4
           fi
-          RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
           echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
           echo "TargetEnvironment=$TargetEnvironment" >> $GITHUB_OUTPUT
           echo "BackupStatus=$BackupStatus" >> $GITHUB_OUTPUT
@@ -270,74 +283,52 @@ jobs:
         shell: bash
         run: |
             RUNTIME=$(aws ssm get-parameter --region ${AWS_REGION} --name "$SSMParameter" --query "Parameter.Value" --output text 2>&1) || true
-            [[ $RUNTIME =~ ParameterNotFound ]] && RUNTIME="{\"Phase\":\"Inactive\",\"Status\":\"Inactive\",\"Message\":\"Runtime not initialized\",\"TargetEnvironment\":\"\",\"RmanTarget\":\"\",\"FixAbsentChunks\":\"\",\"VerboseOutput\":\"\"}"
-            PHASE=$(echo $RUNTIME | jq -r '.Phase')
+            PHASE=$(echo $RUNTIME | jq -r '.Phase // "Initialising"')
             echo "Backup Phase: $PHASE"
             # Initialize the Backup Status for this RMAN Backup Target
             [[ ! $PHASE =~ ^Inactive ]] && echo "Backup is already active on this host.  Multiple concurrent runs are not allowed." && exit 1
             aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite \
-                --value "{\"Phase\":\"Backup\",\"Status\":\"Initializing\",\"Message\":\"Running on $RmanTarget\",\"TargetEnvironment\":\"$TargetEnvironment\",\"RmanTarget\":\"$RmanTarget\",\"FixAbsentChunks\":\"${FixAbsentChunks:-yes}\",\"VerboseOutput\":\"$VerboseOutput\"}" \
+                --value "$Inputs" \
                 --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
 
-      # Only run backup on initial choice of host
       - name: Start Ansible Backup On Selected Host
-        if: env.BackupStatus == 'starting'
+        if: env.BackupStatus != 'success'
         id: backup
         continue-on-error: false
         run: |
           echo "Inputs: $Inputs"
           echo "Period: "$(echo "$Inputs" | jq -r '.Period' )
+          if [[ "$BackupStatus" == "failed" ]]; then
+             if [[ "$BackupStandbyOnPrimaryFailure" == "no" ]]; then
+                echo "Backup Failed And No Retry Allowed"
+                Inputs=$(echo $Inputs | jq '.Phase == "Failed And No Retry Allowed"')
+                aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite --value "$Inputs"
+                exit 10
+             else
+                if [[ "$RmanTarget" =~ "standbydb1" ]] && [[ ! -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml ]]; then
+                    echo "Failed And No Standby Exists"
+                    Inputs=$(echo $Inputs | jq '.Phase == "Failed And No Standby Exists"')
+                    aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite --value "$Inputs"
+                    exit 20
+                fi
+                if [[ "$RmanTarget" =~ "standbydb2" ]] && [[ ! -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb2}.yml ]]; then
+                    echo "Failed on First Standby And No Second Standby Exists"
+                    Inputs=$(echo $Inputs | jq '.Phase == "Failed on First Standby And No Second Standby Exists"')
+                    aws ssm put-parameter --region ${AWS_REGION} --name "$SSMParameter" --type String --overwrite --value "$Inputs"
+                    exit 30
+                fi
+             fi
+          fi
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$(echo "$Inputs" | jq -r '.Period' ) -e enable_trace=$(echo "$Inputs" | jq -r '.EnableTrace') -e ssm_parameter=$SSMParameter -e repository_dispatch="${{ github.repository }}" -e json_inputs="'$Inputs'" $(echo "$Inputs" | jq -r '.VerboseOutput') 
-
-      - name: Start Ansible Backup On First Standby (If Exists) If Primary Backup Failed
-        if: contains(env.RmanTarget,'primarydb') && env.BackupStatus == 'failed' && env.BackupStandbyOnPrimaryFailure == 'yes'
-        shell: bash
-        run: |
-            if [[ -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml ]]
-            then
-              RmanTarget=${RmanTarget/primarydb/standbydb1}
-              echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
-              export ANSIBLE_CONFIG=$ansible_config
-              ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-              $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$(echo "$Inputs" | jq -r '.Period' ) -e enable_trace=$(echo "$Inputs" | jq -r '.EnableTrace') -e repository_dispatch="${{ github.repository }}" -e json_inputs="'$Inputs'" $(echo "$Inputs" | jq -r '.VerboseOutput') 
-            else
-              # Fatal error - backup failed and no standby available to re-run on
-              echo "Standby Not Configured"
-              exit 10
-            fi
-
-      - name: Start Ansible Backup On Second Standby (If Exists) If First Standby Backup Failed
-        if: contains(env.RmanTarget,'standbydb1') && env.BackupStatus == 'failed' && env.BackupStandbyOnPrimaryFailure == 'yes'
-        shell: bash
-        run: |
-            if [[ -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb2}.yml ]]
-            then
-              RmanTarget=${RmanTarget/primarydb/standbydb2}
-              echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
-              export ANSIBLE_CONFIG=$ansible_config
-              ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-              $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$(echo "$Inputs" | jq -r '.Period' ) -e enable_trace=$(echo "$Inputs" | jq -r '.EnableTrace') -e repository_dispatch="${{ github.repository }}" -e json_inputs="'$Inputs'" $(echo "$Inputs" | jq -r '.VerboseOutput') 
-            else
-              # Fatal error - backup failed and no standby available to re-run on
-              echo "Second Standby Not Configured"
-              exit 20
-            fi
-
-      - name: Abort if Primary Backup Failed and Not Allowed To Re-Try on Standby
-        if: contains(env.RmanTarget,'primarydb') && env.BackupStatus == 'failed' && env.BackupStandbyOnPrimaryFailure == 'no'
-        shell: bash
-        run: |
-              echo "Primary Backup failed and no re-try on Standby allowed"
-              exit 30
+          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$(echo "$Inputs" | jq -r '.Period' ) -e enable_trace=$(echo "$Inputs" | jq -r '.EnableTrace // "no"') -e ssm_parameter=$SSMParameter -e repository_dispatch="${{ github.repository }}" -e json_inputs="'$Inputs'" $(echo "$Inputs" | jq -r '.VerboseOutput // ""') 
 
       - name: Start Ansible Validate And Fix Absent Chunks
         if: env.BackupStatus == 'success'
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-          $validate_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e fix_absent_chunks=$(echo "$Inputs" | jq -r '.FixAbsentChunks') $(echo "$Inputs" | jq -r '.VerboseOutput') 
+          $validate_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e fix_absent_chunks=$(echo "$Inputs" | jq -r '.FixAbsentChunks // "yes"') $(echo "$Inputs" | jq -r '.VerboseOutput // ""') 
 
       - name: Get Slack Token
         id: get-slack-token
