--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -198,7 +198,7 @@ jobs:
               [[ -z $TargetHost ]] && "Target Host is not specified in JSON inputs"  && exit 2
               [[ -z $TargetEnvironment ]] && "Target Environment is not specified in JSON inputs" && exit 3
               [[ -z $Period ]] && "Backup Period (daily/weekly) is not specified in JSON inputs" && exit 4
-              if [[ "$(echo $Inputs | jq -r '.RmanTarget)" == "null" ]]; then
+              if [[ "$(echo $Inputs | jq -r '.RmanTarget')" == "null" ]]; then
                  RmanTarget=$(set_rman_target $TargetEnvironment $TargetHost)
                  Inputs=$(echo $Inputs | jq '.RmanTarget = "$RmanTarget"')
               fi
