--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -199,8 +199,11 @@ jobs:
               [[ -z $TargetEnvironment ]] && "Target Environment is not specified in JSON inputs" && exit 3
               [[ -z $Period ]] && "Backup Period (daily/weekly) is not specified in JSON inputs" && exit 4
               if [[ "$(echo $Inputs | jq -r '.RmanTarget')" == "null" ]]; then
+                 echo "No RmanTarget"
                  RmanTarget=$(set_rman_target $TargetEnvironment $TargetHost)
                  Inputs=$(echo $Inputs | jq --arg RMANTARGET "$RmanTarget" '.RmanTarget = $RMANTARGET')
+              else
+                  echo $Inputs | jq -r '.RmanTarget'
               fi
           fi
           echo "RmanTarget: $RmanTarget"
