--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -201,6 +201,7 @@ jobs:
               if [[ "$(echo $Inputs | jq -r '.RmanTarget')" == "null" ]]; then
                  echo "No RmanTarget"
                  RmanTarget=$(set_rman_target $TargetEnvironment $TargetHost)
+                 echo "Now it is $RmanTarget"
                  Inputs=$(echo $Inputs | jq --arg RMANTARGET "$RmanTarget" '.RmanTarget = $RMANTARGET')
               else
                   echo $Inputs | jq -r '.RmanTarget'
