--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -122,9 +122,7 @@ jobs:
           function set_rman_target()
           {
             # Supply 2 parameters:  TargetEnvironment & TargetHost
-            echo "Working with $1 and $2"
             RmanTarget="environment_name_$(echo $1 | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$2"
-            echo "RT is $RmanTarget"
           }
           BackupStatus=starting
           if [[ "${{ github.event_name }}" != "repository_dispatch" ]] && [[ -z "${{ github.event.inputs.ParametersJSON }}" ]];
@@ -147,7 +145,7 @@ jobs:
                 Period="${{ inputs.Period }}"
                 BackupStandbyOnPrimaryFailure="yes"
               fi
-              RmanTarget=$(set_rman_target $TargetEnvironment $TargetHost)
+              set_rman_target $TargetEnvironment $TargetHost
               # Build a JSON variable capturing all the inputs which have been supplied
               Inputs="{"
               Inputs=$Inputs"\"TargetEnvironment\": \"$TargetEnvironment\","
@@ -201,9 +199,7 @@ jobs:
               [[ -z $TargetEnvironment ]] && "Target Environment is not specified in JSON inputs" && exit 3
               [[ -z $Period ]] && "Backup Period (daily/weekly) is not specified in JSON inputs" && exit 4
               if [[ "$(echo $Inputs | jq -r '.RmanTarget')" == "null" ]]; then
-                 echo "No RmanTarget"
-                 RmanTarget=$(set_rman_target $TargetEnvironment $TargetHost)
-                 echo "Now it is $RmanTarget"
+                 set_rman_target $TargetEnvironment $TargetHost
                  Inputs=$(echo $Inputs | jq --arg RMANTARGET "$RmanTarget" '.RmanTarget = $RMANTARGET')
               else
                   echo $Inputs | jq -r '.RmanTarget'
