--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -577,6 +577,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
+          -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e primary=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} \
           -e standby=${{ steps.standbydbsconfigured.outputs.standbydb1Host }} \
           -e method=build \
@@ -590,6 +591,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
+          -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e primary=${{ needs.oracle-rman-pre-duplicate.outputs.DuplicateTarget }} \
           -e standby=${{ steps.standbydbsconfigured.outputs.standbydb2Host }} \
           -e method=build \
