--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -211,8 +211,8 @@ jobs:
           echo "TargetEnvironment=$TargetEnvironment" >> $GITHUB_OUTPUT
           echo "BackupStatus=$BackupStatus" >> $GITHUB_OUTPUT
           echo "BackupError=$BackupError" >> $GITHUB_OUTPUT
-          echo "Inputs="$(echo Inputs | jq @json)
-          echo "Inputs="$(echo Inputs | jq @json) >> $GITHUB_OUTPUT
+          echo "Inputs="$(echo $Inputs | jq @json)
+          echo "Inputs="$(echo $Inputs | jq @json) >> $GITHUB_OUTPUT
           echo "here"
 
       - name: Prepare Slack Channel Name
