--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -300,8 +300,7 @@ jobs:
             # Ignore errors fetching the parameter - this happens if the backup has not been run before
             RUNTIME=$(aws ssm get-parameter --region ${AWS_REGION} --name "$SSMParameter" --query "Parameter.Value" --output text) || true
             echo "Runtime: >>$RUNTIME<<"
-            echo $RUNTIME | jq -r '.Phase // "Initialising"'
-            PHASE=$(echo $RUNTIME | jq -r '.Phase // "Initialising"')
+            PHASE=$(echo $RUNTIME | jq -r '.Phase // "Inactive"')
             echo "Backup Phase: $PHASE"
             # Initialize the Backup Status for this RMAN Backup Target
             [[ ! $PHASE =~ ^Inactive ]] && echo "Backup is already active on this host.  Multiple concurrent runs are not allowed." && exit 1
