--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -314,7 +314,7 @@ jobs:
         continue-on-error: false
         run: |
           echo "Inputs: $Inputs"
-          echo "Period: "$(echo "$Inputs" | jq -r '.Period' )
+          echo "Period: "$(echo "$Inputs" | jq -r | jq -r '.Period' )
           if [[ "$BackupStatus" == "failed" ]]; then
              if [[ "$BackupStandbyOnPrimaryFailure" == "no" ]]; then
                 echo "Backup Failed And No Retry Allowed"
@@ -338,7 +338,7 @@ jobs:
           fi
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$(echo "$Inputs" | jq -r '.Period' ) -e enable_trace=$(echo "$Inputs" | jq -r '.EnableTrace // "no"') -e ssm_parameter=$SSMParameter -e repository_dispatch="${{ github.repository }}" -e json_inputs="'$Inputs'" $(echo "$Inputs" | jq -r '.VerboseOutput // ""') 
+          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$(echo "$Inputs" | jq -r | jq -r '.Period' ) -e enable_trace=$(echo "$Inputs" | jq -r | jq -r '.EnableTrace // "no"') -e ssm_parameter=$SSMParameter -e repository_dispatch="${{ github.repository }}" -e json_inputs="'$Inputs'" $(echo "$Inputs" | jq -r | jq -r '.VerboseOutput // ""') 
 
       - name: Start Ansible Validate And Fix Absent Chunks
         if: env.BackupStatus == 'success'
