Do not include outer quotes in encoding

--- a/playbooks/oracle_backup/backup.yml
+++ b/playbooks/oracle_backup/backup.yml
@@ -104,7 +104,7 @@
         # To avoid this we send the JSON as an encoded string to be decoded by the shell script.
         - name: Enable Repository Dispatch Event if supplied
           set_fact:
-            repository_dispatch_flag: "-r {{ repository_dispatch }} -j '{{ json_inputs | string | b64encode }}'"
+            repository_dispatch_flag: "-r {{ repository_dispatch }} -j {{ json_inputs | b64encode }}"
           when:
              - repository_dispatch is defined
              - json_inputs is defined
